@@ -1,3 +1,9 @@
+2004-07-05  Gavin Sinclair  <gsinclair@soyabean.com.au>
+
+	* lib/rubygems/gem_commands.rb:
+	  - scrubbed up the 'help' command a bit, removing its options
+	  - added information to 'help commands'
+
 2004-07-04  Gavin Sinclair  <gsinclair@soyabean.com.au>
 
 	* lib/rubygems/gem_commands.rb:
